Revision history for TAP

{{$NEXT}}
        - Added a SourceHandler::File
        - Make TAP::Grammar public
        - Renamed Async to Parser

0.3.8  2022-09-02T12:19:11+02:00
        - Correctly check exit code of processes

0.3.7  2022-08-31T13:32:07+02:00
        - Handle start failures more gracefully
        - Don't report succes when no tests have been run
        - Allow running binary tests

0.3.6  2022-08-13T19:29:29+02:00
        - Fix progress bar outputting in parallel mode

0.3.5  2022-01-27T20:21:45+01:00
        - Restore SourceHandler::Exec's constructor
        - Parse pragmas
        - Process strict pragma
        - Correctly handle IO::Path object as SourceHandler::Raku @!incdirs
        - Correctly pass through bailout Promise

0.3.4  2022-01-21T23:29:46+01:00
        - Allow SourceHandler::Raku's incdirs arguments to be Str or IO::Path

0.3.3  2022-01-21T23:00:00+01:00
        - Add a cwd argument to TAP::Harness::run
        - Add out and err argument to TAP::Harness::run
        - Allow coloring with verbose outputting

0.3.1  2022-01-12T01:00:01+01:00
        - Fix Supplier name in Output::Supplier

0.3.0  2022-01-11T22:18:45+01:00
        - Allow Supplier as output handle

0.2.2  2021-12-31T01:04:26+01:00
        - Make error handle a supplier instead of a supply

0.2.1  2021-08-09T15:30:06+02:00
        - Fix warning in Result.exit-failed()

0.2.0  2021-08-08T22:31:06+02:00
        - Move prove6 to App::Prove6
        - Make coloring optional

0.0.7
        - Run all and only .t and .t6 files
        - Automatically set some configuration values from environment
        - Skip dot files and directories

0.0.6
        - Reupload to fix packaging issues

0.0.5
        - Make prove6 look for files recursively
        - Work around a module loading bug involving dynamic loading